init Slider/Reserve/Service; API added v1.1

--- a/src/index.html
+++ b/src/index.html
@@ -124,7 +124,7 @@
 							<span class="price__item-count">300 руб</span>
 							</li>
 						</ul>
-						<a class="price-content__link  main-link" href="#reserve" >Записаться</a>
+						<a class="price-content__link  main-link" href="#reserve">Записаться</a>
 					</div><!-- /.price__content -->
 				</div><!-- /.price__wrapper-content -->
 			</div> <!-- /.container -->
@@ -202,22 +202,20 @@
 		
 							<label class="radio" >
 								<input class="radio__input" type="radio" name="service">
-								<span class="radio__label"
-									>Стрижка + коррекция бороды</span
-								>
+								<span class="radio__label">Стрижка + коррекция бороды</span>
 							</label>
 		
-							<label class="radio" >
+							<label class="radio">
 								<input class="radio__input" type="radio" name="service">
 								<span class="radio__label">Камуфляж</span>
 							</label>
 		
-							<label class="radio" >
+							<label class="radio">
 								<input class="radio__input" type="radio" name="service">
 								<span class="radio__label">Моделирование бороды + камуфляж</span>
 							</label>
 		
-							<label class="radio" >
+							<label class="radio">
 								<input class="radio__input" type="radio" name="service">
 								<span class="radio__label">Коррекция воском</span>
 							</label>
@@ -226,133 +224,114 @@
 						<fieldset class="reserve__fieldset" name="fieldspec">
 							<legend class="reserve__legend">Специалист</legend>
 		
-							<label class="radio" >
+							<label class="radio">
 								<input class="radio__input" type="radio" name="spec">
-								<span
-									class="radio__label radio__label_spec"
-									style="--bg-image: url(../img/spec1.png)"
-									>Игорь</span
-								>
+								<span class="radio__label radio__label_spec" style="--bg-image: url(/img/spec1.png)">Игорь</span>
 							</label>
 		
-							<label class="radio" >
+							<label class="radio">
 								<input class="radio__input" type="radio" name="spec">
-								<span
-									class="radio__label radio__label_spec"
-									style="--bg-image: url(../img/spec2.png)"
-									>Анатолий</span
-								>
+								<span class="radio__label radio__label_spec" style="--bg-image: url(img/spec2.png)">Анатолий</span>
 							</label>
 		
-							<label class="radio" >
+							<label class="radio">
 								<input class="radio__input" type="radio" name="spec">
-								<span
-									class="radio__label radio__label_spec"
-									style="--bg-image: url(../img/spec3.png)"
-									>Руслан</span
-								>
+								<span class="radio__label radio__label_spec" style="--bg-image: url(img/spec3.png)">Руслан</span>
 							</label>
 	
-							<label class="radio" >
+							<label class="radio">
 								<input class="radio__input" type="radio" name="spec">
-								<span
-									class="radio__label radio__label_spec"
-									style="--bg-image: url(../img/spec4.png)"
-									>Михаил</span
-								>
+								<span class="radio__label radio__label_spec" style="--bg-image: url(img/spec3.png)">Михаил</span>
 							</label>
 	
-							<label class="radio" >
+							<label class="radio">
 								<input class="radio__input" type="radio" name="spec">
-								<span
-									class="radio__label radio__label_spec"
-									style="--bg-image: url(../img/spec5.png)"
-									>Евгений</span
-								>
+								<span class="radio__label radio__label_spec" style="--bg-image: url(img/spec3.png)">Евгений</span>
 							</label>
 						</fieldset>
 
 						<fieldset class="reserve__fieldset" name="fielddata">
 							<legend class="reserve__legend">Дата и время</legend>
-						</fieldset>
-						<fieldset class="reserve__fieldset reserve__fieldset_sub" name="fieldmonth">
-							<label class="radio" >
-								<input class="radio__input" type="radio" name="month">
-								<span class="radio__label">Январь</span>
-							</label>
-	
-							<label class="radio" >
-								<input class="radio__input" type="radio" name="month">
-								<span class="radio__label">февраль</span>
-							</label>
-	
-							<label class="radio" >
-								<input class="radio__input" type="radio" name="month">
-								<span class="radio__label">Март</span>
-							</label>
-						</fieldset>
+						
+							<fieldset class="reserve__fieldset  reserve__fieldset_sub" name="fieldmonth">
+								<label class="radio" >
+									<input class="radio__input" type="radio" name="month">
+									<span class="radio__label">Январь</span>
+								</label>
+		
+								<label class="radio" >
+									<input class="radio__input" type="radio" name="month">
+									<span class="radio__label">Февраль</span>
+								</label>
+		
+								<label class="radio" >
+									<input class="radio__input" type="radio" name="month">
+									<span class="radio__label">Март</span>
+								</label>
+							</fieldset>
 
-						<fieldset class="reserve__fieldset reserve__fieldset_sub" name="fieldday">
-							<label class="radio" >
-								<input class="radio__input" type="radio" name="day">
-								<span class="radio__label">18 января</span>
-							</label>
-	
-							<label class="radio" >
-								<input class="radio__input" type="radio" name="day">
-								<span class="radio__label">19 января</span>
-							</label>
-	
-							<label class="radio" >
-								<input class="radio__input" type="radio" name="day">
-								<span class="radio__label">20 января</span>
-							</label>
-	
-							<label class="radio" >
-								<input class="radio__input" type="radio" name="day">
-								<span class="radio__label">21 января</span>
-							</label>
-						</fieldset>
+							<fieldset class="reserve__fieldset reserve__fieldset_sub" name="fieldday">
+								<label class="radio" >
+									<input class="radio__input" type="radio" name="day">
+									<span class="radio__label">18 января</span>
+								</label>
+		
+								<label class="radio" >
+									<input class="radio__input" type="radio" name="day">
+									<span class="radio__label">19 января</span>
+								</label>
+		
+								<label class="radio" >
+									<input class="radio__input" type="radio" name="day">
+									<span class="radio__label">20 января</span>
+								</label>
+		
+								<label class="radio" >
+									<input class="radio__input" type="radio" name="day">
+									<span class="radio__label">21 января</span>
+								</label>
+							</fieldset>
 
-						<fieldset class="reserve__fieldset reserve__fieldset_sub" name="fieldtime">
-							<label class="radio" >
-								<input class="radio__input" type="radio" name="time">
-								<span class="radio__label">10:00-11:30</span>
-							</label>
-	
-							<label class="radio" >
-								<input class="radio__input" type="radio" name="time">
-								<span class="radio__label">11:30-13:00</span>
-							</label>
-	
-							<label class="radio" >
-								<input class="radio__input" type="radio" name="time">
-								<span class="radio__label">13:00-14:30</span>
-							</label>
-	
-							<label class="radio" >
-								<input class="radio__input" type="radio" name="time">
-								<span class="radio__label">14:30-16:00</span>
-							</label>
-	
-							<label class="radio" >
-								<input class="radio__input" type="radio" name="time">
-								<span class="radio__label">16:00-17:30</span>
-							</label>
-	
-							<label class="radio" >
-								<input class="radio__input" type="radio" name="time">
-								<span class="radio__label">17:30-19:00</span>
-							</label>
-	
-							<label class="radio" >
-								<input class="radio__input" type="radio" name="time">
-								<span class="radio__label">19:00-20:30</span>
-							</label>
+							<fieldset class="reserve__fieldset reserve__fieldset_sub" name="fieldtime">
+								<label class="radio" >
+									<input class="radio__input" type="radio" name="time">
+									<span class="radio__label">10:00-11:30</span>
+								</label>
+		
+								<label class="radio" >
+									<input class="radio__input" type="radio" name="time">
+									<span class="radio__label">11:30-13:00</span>
+								</label>
+		
+								<label class="radio" >
+									<input class="radio__input" type="radio" name="time">
+									<span class="radio__label">13:00-14:30</span>
+								</label>
+		
+								<label class="radio" >
+									<input class="radio__input" type="radio" name="time">
+									<span class="radio__label">14:30-16:00</span>
+								</label>
+		
+								<label class="radio" >
+									<input class="radio__input" type="radio" name="time">
+									<span class="radio__label">16:00-17:30</span>
+								</label>
+		
+								<label class="radio" >
+									<input class="radio__input" type="radio" name="time">
+									<span class="radio__label">17:30-19:00</span>
+								</label>
+		
+								<label class="radio" >
+									<input class="radio__input" type="radio" name="time">
+									<span class="radio__label">19:00-20:30</span>
+								</label>
+							</fieldset>
 						</fieldset>
 					</div> <!--/.reserve__form-container-->
 
-					<button class="reserve__btn main-link" disabled>Записаться</button>
+					<button class="reserve__btn main-link" disabled id="btn">Записаться</button> <!-- TODO-->
 				</form>
 			</div> <!-- /.container -->
 		</section> <!-- /.reserve -->
