--- a/src/index.html
+++ b/src/index.html
@@ -226,27 +226,27 @@
 		
 							<label class="radio">
 								<input class="radio__input" type="radio" name="spec">
-								<span class="radio__label radio__label_spec" style="--bg-image: url(/img/spec1.png)">Игорь</span>
+								<span class="radio__label radio__label_spec">Игорь</span>
 							</label>
 		
 							<label class="radio">
 								<input class="radio__input" type="radio" name="spec">
-								<span class="radio__label radio__label_spec" style="--bg-image: url(img/spec2.png)">Анатолий</span>
+								<span class="radio__label radio__label_spec">Анатолий</span>
 							</label>
 		
 							<label class="radio">
 								<input class="radio__input" type="radio" name="spec">
-								<span class="radio__label radio__label_spec" style="--bg-image: url(img/spec3.png)">Руслан</span>
+								<span class="radio__label radio__label_spec">Руслан</span>
 							</label>
 	
 							<label class="radio">
 								<input class="radio__input" type="radio" name="spec">
-								<span class="radio__label radio__label_spec" style="--bg-image: url(img/spec3.png)">Михаил</span>
+								<span class="radio__label radio__label_spec">Михаил</span>
 							</label>
 	
 							<label class="radio">
 								<input class="radio__input" type="radio" name="spec">
-								<span class="radio__label radio__label_spec" style="--bg-image: url(img/spec3.png)">Евгений</span>
+								<span class="radio__label radio__label_spec">Евгений</span>
 							</label>
 						</fieldset>
 
